# stacktrace

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cmake/: config-template.cmake.in  packaging.cmake  warnings.cmake
cmake/modules/: Findlibunwind.cmake
examples/: example1.cpp  exceptions.cpp  signals.cpp
scripts/: build.sh
src/: stacktrace.hpp
src/stacktrace/: filter.hpp  hooks.hpp  stackframe.hpp  stacktrace.hpp  stacktrace_posix.hpp  stacktrace_win32.hpp  util.hpp
